create DSFTools command line entrance.